# Skynette

./: .claude_settings.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  LIMITATIONS_RESOLVED.md  MANIFEST.in  PHASE2_SUMMARY.md  PYPI_SUMMARY.md  QUICKSTART.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  Skynette.bat  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  build.bat  build.py  build_all.py  build_exe.py  build_installer.py  build_linux.py  build_macos.py  build_windows.py  pyproject.toml  requirements.txt  setup_msi.py  skynette.py  skynette.spec  test_advanced_mode.py  test_create_workflow.py  test_e2e_flow.py  test_installation.py  (+2 more)
.auto-claude/insights/: current_session.json
.auto-claude/insights/sessions/: session-1767950975889.json
.auto-claude/specs/001-extensively-test-and-bug-fix-this-project-making-i/: implementation_plan.json  requirements.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/01-stability-audit/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-provider-foundation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-code-editor-core/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-ai-assisted-editing/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v3-agent-FEATURES.md  v3-agent-STACK.md
docs/: AI_PROVIDERS.md  DISTRIBUTION.md  ERROR_HANDLING.md  EXAMPLES.md  FAQ.md  TASK_7_AI_NODE_PALETTE_IMPLEMENTATION.md  TESTING.md  USER_GUIDE.md  known-issues.md
docs/development/: rag-ui-architecture.md
docs/plans/: 2026-01-07-adaptive-agent-system-design.md  2026-01-07-skynette-workflow-platform-design.md  2026-01-10-phase3-sprint1-mvp.md  2026-01-10-phase3-sprint2-advanced.md  2026-01-10-phase3-sprint3-polish.md  2026-01-10-phase3-ui-integration-design.md  2026-01-10-phase4-ai-integration-design.md  2026-01-10-phase4-sprint1-implementation.md  2026-01-10-phase4-sprint2-ai-hub-ui.md  2026-01-11-phase4-sprint3-implementation.md  2026-01-11-phase4-sprint3-usage-dashboard.md  2026-01-11-phase5-rag-integration-design.md  2026-01-11-phase5-sprint1-implementation.md  2026-01-12-phase5-sprint4-rag-ui-design.md  2026-01-13-phase6-app-integrations.md  2026-01-14-complete-shipping-plan.md  2026-01-14-execution-checklist.md  2026-01-16-release-prep-design.md  2026-01-16-v1.0-release-plan.md
docs/proposals/: monorepo-structure.md
docs/user-guide/: knowledge-bases.md
scripts/: build.py
skynette-2.0.0/: PKG-INFO
src/: __init__.py  cli.py  main.py  updater.py
src/agent/: __init__.py
src/ai/: __init__.py  cost.py  gateway.py  security.py  storage.py  system_info.py
src/cloud/: __init__.py
src/core/: __init__.py
src/data/: __init__.py  credentials.py  storage.py
src/plugins/: __init__.py  manager.py
src/rag/: __init__.py  chromadb_client.py  dimension_validator.py  embeddings.py  models.py  processor.py  project_indexer.py  schema.sql  service.py  storage.py
src/services/: __init__.py
src/ui/: __init__.py  app.py  theme.py
tests/: __init__.py  conftest.py  helpers.py  test_rag_wiring.py  verify_ai_nodes.py
tests/agent/: test_safety_e2e.py
tests/e2e/: __init__.py  conftest.py  test_agents.py  test_ai_hub.py  test_ai_hub_full_flow.py  test_ai_hub_knowledge_bases.py  test_ai_hub_wizard.py  test_ai_node_palette.py  test_ai_providers.py  test_assistant.py  test_code_editor_workflow.py  test_critical_journeys.py  test_devtools.py  test_navigation.py  test_plugins.py  test_provider_status_bar.py  test_rag_integration.py  test_runs.py  test_settings.py  test_usage_dashboard.py  test_workflow_editor.py  test_workflows.py
tests/fixtures/: __init__.py  workflows.py
tests/integration/: __init__.py  test_ai_editing.py  test_knowledge_bases_upload.py  test_rag_workflow.py  test_ui_execution.py  test_ui_workflows.py
tests/mocks/: __init__.py  ai_providers.py  storage.py
tests/unit/: __init__.py  test_agent_core.py  test_ai_chat_audit.py  test_ai_hub_refactor.py  test_ai_models.py  test_ai_providers.py  test_ai_security.py  test_ai_storage.py  test_app_nodes.py  test_basic_nodes.py  test_canvas_editor.py  test_chromadb_client.py  test_code_execution_node.py  test_collection_card.py  test_collection_dialog.py  test_cost_calculator.py  test_credentials.py  test_csv_export.py  test_dimension_validator.py  test_editor_services.py  test_editor_state.py  test_gemini_provider.py  test_grok_provider.py  test_imports.py  test_integration.py  test_knowledge_bases_models.py  test_knowledge_bases_view.py  test_model_management_audit.py  test_ollama_status.py  test_phase5_integration.py  test_plugin_manager.py  test_plugin_sdk.py  test_progress_tracker.py  test_project_indexer.py  test_query_dialog.py  test_rag_context.py  test_rag_embeddings.py  test_rag_ingest_node.py  test_rag_models.py  test_rag_processor.py  (+15 more)
(+380 files in other folders)
