[project]
name = "skynette"
version = "0.1.0"
description = "AI-Native Workflow Automation Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skynette Team"}
]
requires-python = ">=3.11"
keywords = ["workflow", "automation", "ai", "llm", "n8n", "zapier"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # UI Framework
    "flet>=0.25.0",

    # AI & ML
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "groq>=0.5.0",
    "huggingface-hub>=0.20.0",
    "chromadb>=0.4.0",

    # Data & Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",

    # HTTP & Networking
    "httpx>=0.27.0",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # Workflow Engine
    "apscheduler>=3.10.0",
    "watchdog>=4.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.21.0",

    # File Processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "python-magic-bin>=0.4.0;sys_platform=='win32'",
    "python-magic>=0.4.0;sys_platform!='win32'",

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
skynette = "src.main:main"

[project.urls]
Homepage = "https://github.com/skynette/skynette"
Documentation = "https://docs.skynette.io"
Repository = "https://github.com/skynette/skynette"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
