[project]
name = "skynette"
version = "2.0.0"
description = "AI-Native Workflow Automation Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skynette Team"}
]
requires-python = ">=3.11"
keywords = ["workflow", "automation", "ai", "llm", "n8n", "zapier"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # UI Framework
    "flet>=0.25.0",

    # Data & Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",

    # HTTP & Networking
    "httpx>=0.27.0",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # Workflow Engine
    "apscheduler>=3.10.0",
    "watchdog>=4.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.21.0",

    # File Processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "python-magic-bin>=0.4.0;sys_platform=='win32'",
    "python-magic>=0.4.0;sys_platform!='win32'",

    # MCP Integration
    "mcp>=1.25.0",
    "docker>=7.0.0",  # Docker SDK for sandbox containers

    # Web Search
    "ddgs>=7.0.0",  # DuckDuckGo search API
    "beautifulsoup4>=4.12.0",  # HTML parsing for scraper fallback

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
ai = [
    # AI & ML (Phase 4)
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-genai>=1.59.0",  # Gemini (official SDK, replaces deprecated google-generativeai)
    "groq>=0.5.0",
    "xai-sdk>=1.5.0",  # Grok (official xAI SDK)
    "huggingface-hub>=0.20.0",
    "chromadb>=0.5.0",  # 0.5.0+ for Pydantic 2 compatibility
    "sentence-transformers>=2.2.0",  # Local embeddings for RAG (Phase 5)
]
databases = [
    # Database integrations (Phase 6)
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "aiomysql>=0.2.0",  # MySQL async driver
    "motor>=3.3.0",  # MongoDB async driver
]
cloud = [
    # Cloud service integrations (Phase 6)
    "google-api-python-client>=2.100.0",  # Google Drive, Sheets
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "boto3>=1.34.0",  # AWS S3
    "dropbox>=11.36.0",  # Dropbox (optional, we use httpx)
]
all = [
    # All optional dependencies
    "skynette[ai,databases,cloud]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.5.0",
    "pytest-xdist>=3.5.0",
    "playwright>=1.40.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
skynette = "src.main:main"

[project.urls]
Homepage = "https://github.com/skynette/skynette"
Documentation = "https://docs.skynette.io"
Repository = "https://github.com/skynette/skynette"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
    "tests",
]

[tool.bandit]
exclude_dirs = ["venv", "tests", "build", "dist"]
skips = ["B101"]  # Skip assert warning in production code
